feat(qc): Implement AI annotation and review pipeline
This commit introduces the Quality Control (QC) pipeline, enabling AI-powered annotation of raw text data using the Magdalenka Codex and Gemini SDK. It includes functionality for:

- Loading raw text data from files.
- Initiating AI annotation to classify text based on tactics, emotions, and cleavages.
- Presenting annotated samples for human review.
- Approving or rejecting individual samples.
- Bulk approval of pending samples.
- Exporting approved annotations in a BERT finetune compatible format.

This pipeline is crucial for operationalizing the Magdalenka Codex Classification manifest and ensuring high-quality labeled data.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     "@angular/common/http": "https://next.esm.sh/@angular/common@^20.3.10/http?external=rxjs",
     "@google/genai": "https://next.esm.sh/@google/genai@^1.29.0?external=rxjs",
     "@angular/router": "https://next.esm.sh/@angular/router@^20.3.10?external=rxjs",
-    "@angular/core": "https://next.esm.sh/@angular/core@^20.3.10?external=rxjs"
+    "@angular/core": "https://next.esm.sh/@angular/core@^20.3.10?external=rxjs",
+    "@angular/common": "https://next.esm.sh/@angular/common@^20.3.11?external=rxjs"
   }
 }
 </script>
